src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef signed long long ImS64;    
typedef struct ImGuiMultiSelectIO_t ImGuiMultiSelectIO;                        
typedef int ImGuiCond;            
typedef int ImGuiColorEditFlags;    
typedef int ImGuiMultiSelectFlags;  
typedef int ImGuiSelectableFlags;   
typedef int ImGuiTreeNodeFlags;     
typedef ImS64 ImGuiSelectionUserData;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags , ImVec2 size );  
CIMGUI_API void ImGui_SetColorEditOptions(ImGuiColorEditFlags flags);                                                                       
CIMGUI_API bool  ImGui_TreeNode(const char* label);
CIMGUI_API bool  ImGui_TreeNodeStrUnformatted(const char* str_id, const char* text);                                               
CIMGUI_API bool  ImGui_TreeNodePtrUnformatted(const void* ptr_id, const char* text);                                               
CIMGUI_API bool  ImGui_TreeNodeEx(const char* label, ImGuiTreeNodeFlags flags );
CIMGUI_API bool  ImGui_TreeNodeExStrUnformatted(const char* str_id, ImGuiTreeNodeFlags flags, const char* text);
CIMGUI_API bool  ImGui_TreeNodeExPtrUnformatted(const void* ptr_id, ImGuiTreeNodeFlags flags, const char* text);
CIMGUI_API void  ImGui_TreePush(const char* str_id);                                                                               
CIMGUI_API void  ImGui_TreePushPtr(const void* ptr_id);                                                                            
CIMGUI_API void  ImGui_TreePop(void);                                                                                              
CIMGUI_API float ImGui_GetTreeNodeToLabelSpacing(void);                                                                            
CIMGUI_API bool  ImGui_CollapsingHeader(const char* label, ImGuiTreeNodeFlags flags );                                    
CIMGUI_API bool  ImGui_CollapsingHeaderBoolPtr(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags );            
CIMGUI_API void  ImGui_SetNextItemOpen(bool is_open, ImGuiCond cond );                                                    
CIMGUI_API void  ImGui_SetNextItemStorageID(ImGuiID storage_id);                                                                   
CIMGUI_API bool ImGui_Selectable(const char* label, bool selected , ImGuiSelectableFlags flags , ImVec2 size );  
CIMGUI_API bool ImGui_SelectableBoolPtr(const char* label, bool* p_selected, ImGuiSelectableFlags flags , ImVec2 size );      
CIMGUI_API ImGuiMultiSelectIO* ImGui_BeginMultiSelect(ImGuiMultiSelectFlags flags, int selection_size , int items_count );
CIMGUI_API ImGuiMultiSelectIO* ImGui_EndMultiSelect(void);
CIMGUI_API void                ImGui_SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data);
CIMGUI_API bool                ImGui_IsItemToggledSelection(void);  
CIMGUI_API bool ImGui_BeginListBox(const char* label, ImVec2 size );                                                         
CIMGUI_API void ImGui_EndListBox(void);                                                                                                          
CIMGUI_API bool ImGui_ListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLines(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogram(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginMenuBar(void);                                       
CIMGUI_API void ImGui_EndMenuBar(void);                                         
CIMGUI_API bool ImGui_BeginMainMenuBar(void);                                   
CIMGUI_API void ImGui_EndMainMenuBar(void);                                     
CIMGUI_API bool ImGui_BeginMenu(const char* label, bool enabled );  
CIMGUI_API void ImGui_EndMenu(void);                                            
CIMGUI_API bool ImGui_MenuItem(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool ImGui_MenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
typedef enum
{
    ImGuiWindowFlags_None                      = 0,
    ImGuiWindowFlags_NoTitleBar                = 1<<0,   
    ImGuiWindowFlags_NoResize                  = 1<<1,   
    ImGuiWindowFlags_NoMove                    = 1<<2,   
    ImGuiWindowFlags_NoScrollbar               = 1<<3,   
    ImGuiWindowFlags_NoScrollWithMouse         = 1<<4,   
    ImGuiWindowFlags_NoCollapse                = 1<<5,   
    ImGuiWindowFlags_AlwaysAutoResize          = 1<<6,   
    ImGuiWindowFlags_NoBackground              = 1<<7,   
    ImGuiWindowFlags_NoSavedSettings           = 1<<8,   
    ImGuiWindowFlags_NoMouseInputs             = 1<<9,   
    ImGuiWindowFlags_MenuBar                   = 1<<10,  
    ImGuiWindowFlags_HorizontalScrollbar       = 1<<11,  
    ImGuiWindowFlags_NoFocusOnAppearing        = 1<<12,  
    ImGuiWindowFlags_NoBringToFrontOnFocus     = 1<<13,  
    ImGuiWindowFlags_AlwaysVerticalScrollbar   = 1<<14,  
    ImGuiWindowFlags_AlwaysHorizontalScrollbar = 1<<15,  
    ImGuiWindowFlags_NoNavInputs               = 1<<16,  
    ImGuiWindowFlags_NoNavFocus                = 1<<17,  
    ImGuiWindowFlags_UnsavedDocument           = 1<<18,  
    ImGuiWindowFlags_NoNav                     = ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_NoDecoration              = ImGuiWindowFlags_NoTitleBar | ImGuiWindowFlags_NoResize | ImGuiWindowFlags_NoScrollbar | ImGuiWindowFlags_NoCollapse,
    ImGuiWindowFlags_NoInputs                  = ImGuiWindowFlags_NoMouseInputs | ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_ChildWindow               = 1<<24,  
    ImGuiWindowFlags_Tooltip                   = 1<<25,  
    ImGuiWindowFlags_Popup                     = 1<<26,  
    ImGuiWindowFlags_Modal                     = 1<<27,  
    ImGuiWindowFlags_ChildMenu                 = 1<<28,  
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiWindowFlags_NavFlattened              = 1<<29,  
    ImGuiWindowFlags_AlwaysUseWindowPadding    = 1<<30,  
#endif 
} ImGuiWindowFlags_;
typedef enum
{
    ImGuiChildFlags_None                   = 0,
    ImGuiChildFlags_Borders                = 1<<0,                     
    ImGuiChildFlags_AlwaysUseWindowPadding = 1<<1,                     
    ImGuiChildFlags_ResizeX                = 1<<2,                     
    ImGuiChildFlags_ResizeY                = 1<<3,                     
    ImGuiChildFlags_AutoResizeX            = 1<<4,                     
    ImGuiChildFlags_AutoResizeY            = 1<<5,                     
    ImGuiChildFlags_AlwaysAutoResize       = 1<<6,                     
    ImGuiChildFlags_FrameStyle             = 1<<7,                     
    ImGuiChildFlags_NavFlattened           = 1<<8,                     
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiChildFlags_Border                 = ImGuiChildFlags_Borders,  
#endif 
} ImGuiChildFlags_;
struct ImGuiMultiSelectIO_t
{
    ImVector_ImGuiSelectionRequest Requests;       
    ImGuiSelectionUserData         RangeSrcItem;   
    ImGuiSelectionUserData         NavIdItem;      
    bool                           NavIdSelected;  
    bool                           RangeSrcReset;  
    int                            ItemsCount;     
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );