src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// display a color square/button, hover for details, return true when pressed.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_ColorButton(byte* desc_id, System.Numerics.Vector4 col, ImGuiColorEditFlags flags, System.Numerics.Vector2 size);

    /// <summary>
    /// initialize current options (generally on application startup) if you want to select a default format, picker type, etc. User will be able to change many settings, unless you pass the _NoOptions flag to your calls.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetColorEditOptions(ImGuiColorEditFlags flags);

    /// <summary>
    /// <para>Widgets: Trees</para>
    /// - TreeNode functions return true when the node is open, in which case you need to also call TreePop() when you are finished displaying the tree node contents.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNode(byte* label);

    /// <summary>
    /// helper variation to easily decorelate the id from the displayed string. Read the FAQ about why and how to use ID. to align arbitrary text at the same level as a TreeNode() you can use Bullet().
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNodeStrUnformatted(byte* str_id, byte* text);

    /// <summary>
    /// "
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNodePtrUnformatted(IntPtr ptr_id, byte* text);

    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNodeEx(byte* label, ImGuiTreeNodeFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNodeExStrUnformatted(byte* str_id, ImGuiTreeNodeFlags flags, byte* text);

    [DllImport("cimgui")]
    public static extern byte ImGui_TreeNodeExPtrUnformatted(IntPtr ptr_id, ImGuiTreeNodeFlags flags, byte* text);

    /// <summary>
    /// ~ Indent()+PushID(). Already called by TreeNode() when returning true, but you can call TreePush/TreePop yourself if desired.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TreePush(byte* str_id);

    /// <summary>
    /// "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TreePushPtr(IntPtr ptr_id);

    /// <summary>
    /// ~ Unindent()+PopID()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TreePop();

    /// <summary>
    /// horizontal distance preceding label when using TreeNode*() or Bullet() == (g.FontSize + style.FramePadding.x*2) for a regular unframed TreeNode
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetTreeNodeToLabelSpacing();

    /// <summary>
    /// if returning 'true' the header is open. doesn't indent nor push on ID stack. user doesn't have to call TreePop().
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_CollapsingHeader(byte* label, ImGuiTreeNodeFlags flags);

    /// <summary>
    /// when 'p_visible != NULL': if '*p_visible==true' display an additional small close button on upper right of the header which will set the bool to false when clicked, if '*p_visible==false' don't display the header.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_CollapsingHeaderBoolPtr(byte* label, byte* p_visible, ImGuiTreeNodeFlags flags);

    /// <summary>
    /// set next TreeNode/CollapsingHeader open state.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextItemOpen(byte is_open, ImGuiCond cond);

    /// <summary>
    /// set id to use for open/close storage (default to same as item id).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextItemStorageID(uint storage_id);

    /// <summary>
    /// <para>Widgets: Selectables</para>
    /// <para>- A selectable highlights when hovered, and can display another color when selected.</para>
    /// <para>- Neighbors selectable extend their highlight bounds in order to leave no gap between them. This is so a series of selected Selectable appear contiguous.</para>
    /// "bool selected" carry the selection state (read-only). Selectable() is clicked is returns true so you can modify your selection state. size.x==0.0: use remaining width, size.x&gt;0.0: specify width. size.y==0.0: use label height, size.y&gt;0.0: specify height
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_Selectable(byte* label, byte selected, ImGuiSelectableFlags flags, System.Numerics.Vector2 size);

    /// <summary>
    /// "bool* p_selected" point to the selection state (read-write), as a convenient helper.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_SelectableBoolPtr(byte* label, byte* p_selected, ImGuiSelectableFlags flags, System.Numerics.Vector2 size);

    /// <summary>
    /// <para>Multi-selection system for Selectable(), Checkbox(), TreeNode() functions [BETA]</para>
    /// <para>- This enables standard multi-selection/range-selection idioms (CTRL+Mouse/Keyboard, SHIFT+Mouse/Keyboard, etc.) in a way that also allow a clipper to be used.</para>
    /// <para>- ImGuiSelectionUserData is often used to store your item index within the current view (but may store something else).</para>
    /// <para>- Read comments near ImGuiMultiSelectIO for instructions/details and see 'Demo-&gt;Widgets-&gt;Selection State &amp; Multi-Select' for demo.</para>
    /// <para>- TreeNode() is technically supported but... using this correctly is more complicated. You need some sort of linear/random access to your tree,</para>
    /// <para>which is suited to advanced trees setups already implementing filters and clipper. We will work simplifying the current demo.</para>
    /// - 'selection_size' and 'items_count' parameters are optional and used by a few features. If they are costly for you to compute, you may avoid them.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiMultiSelectIO* ImGui_BeginMultiSelect(ImGuiMultiSelectFlags flags, int selection_size, int items_count);

    [DllImport("cimgui")]
    public static extern ImGuiMultiSelectIO* ImGui_EndMultiSelect();

    [DllImport("cimgui")]
    public static extern void ImGui_SetNextItemSelectionUserData(long selection_user_data);

    /// <summary>
    /// Was the last item selection state toggled? Useful if you need the per-item information _before_ reaching EndMultiSelect(). We only returns toggle _event_ in order to handle clipping correctly.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemToggledSelection();

    /// <summary>
    /// <para>Widgets: List Boxes</para>
    /// <para>- This is essentially a thin wrapper to using BeginChild/EndChild with the ImGuiChildFlags_FrameStyle flag for stylistic changes + displaying a label.</para>
    /// <para>- If you don't need a label you can probably simply use BeginChild() with the ImGuiChildFlags_FrameStyle flag for the same result.</para>
    /// <para>- You can submit contents and manage your selection state however you want it, by creating e.g. Selectable() or any other items.</para>
    /// <para>- The simplified/old ListBox() api are helpers over BeginListBox()/EndListBox() which are kept available for convenience purpose. This is analogous to how Combos are created.</para>
    /// <para>- Choose frame width:   size.x &gt; 0.0f: custom  /  size.x &lt; 0.0f or -FLT_MIN: right-align   /  size.x = 0.0f (default): use current ItemWidth</para>
    /// <para>- Choose frame height:  size.y &gt; 0.0f: custom  /  size.y &lt; 0.0f or -FLT_MIN: bottom-align  /  size.y = 0.0f (default): arbitrary default height which can fit ~7 items</para>
    /// open a framed scrolling region
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginListBox(byte* label, System.Numerics.Vector2 size);

    /// <summary>
    /// only call EndListBox() if BeginListBox() returned true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndListBox();

    [DllImport("cimgui")]
    public static extern byte ImGui_ListBox(byte* label, int* current_item, byte** items, int items_count, int height_in_items);

    [DllImport("cimgui")]
    public static extern byte ImGui_ListBoxCallback(byte* label, int* current_item, delegate* unmanaged<IntPtr, int, byte*> getter, IntPtr user_data, int items_count, int height_in_items);

    /// <summary>
    /// <para>Widgets: Data Plotting</para>
    /// - Consider using ImPlot (https://github.com/epezent/implot) which is much better!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PlotLines(byte* label, float* values, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, System.Numerics.Vector2 graph_size, int stride);

    [DllImport("cimgui")]
    public static extern void ImGui_PlotLinesCallback(byte* label, delegate* unmanaged<IntPtr, int, float> values_getter, IntPtr data, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, System.Numerics.Vector2 graph_size);

    [DllImport("cimgui")]
    public static extern void ImGui_PlotHistogram(byte* label, float* values, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, System.Numerics.Vector2 graph_size, int stride);

    [DllImport("cimgui")]
    public static extern void ImGui_PlotHistogramCallback(byte* label, delegate* unmanaged<IntPtr, int, float> values_getter, IntPtr data, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, System.Numerics.Vector2 graph_size);

    /// <summary>
    /// <para>Widgets: Menus</para>
    /// <para>- Use BeginMenuBar() on a window ImGuiWindowFlags_MenuBar to append to its menu bar.</para>
    /// <para>- Use BeginMainMenuBar() to create a menu bar at the top of the screen and append to it.</para>
    /// <para>- Use BeginMenu() to create a menu. You can call BeginMenu() multiple time with the same identifier to append more items to it.</para>
    /// <para>- Not that MenuItem() keyboardshortcuts are displayed as a convenience but _not processed_ by Dear ImGui at the moment.</para>
    /// append to menu-bar of current window (requires ImGuiWindowFlags_MenuBar flag set on parent window).
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginMenuBar();

    /// <summary>
    /// only call EndMenuBar() if BeginMenuBar() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndMenuBar();

    /// <summary>
    /// create and append to a full screen menu-bar.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginMainMenuBar();

    /// <summary>
    /// only call EndMainMenuBar() if BeginMainMenuBar() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndMainMenuBar();

    /// <summary>
    /// create a sub-menu entry. only call EndMenu() if this returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginMenu(byte* label, byte enabled);

    /// <summary>
    /// only call EndMenu() if BeginMenu() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndMenu();

    /// <summary>
    /// return true when activated.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_MenuItem(byte* label, byte* shortcut, byte selected, byte enabled);

    /// <summary>
    /// return true when activated + toggle (*p_selected) if p_selected != NULL
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_MenuItemBoolPtr(byte* label, byte* shortcut, byte* p_selected, byte enabled);
